--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   align-items: center;
   margin: 20px;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 20px;
 }
 
 .forms {
