--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
   margin: 20px;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 20px;
+  
+}
+
+p {
+  font-size: 40px;
 }
 
 .forms {
@@ -22,6 +27,7 @@ body {
 
 .texto {
   display: flex;
+  align-items: flex-start;
   flex-direction: column;
   justify-content: space-between;
   gap: 20px;
